--- a/quickie/src/main/res/layout/quickie_overlay_view.xml
+++ b/quickie/src/main/res/layout/quickie_overlay_view.xml
@@ -16,10 +16,10 @@
       android:ellipsize="end"
       android:gravity="center"
       android:maxLines="2"
-      android:paddingBottom="8dp"
-      android:paddingEnd="24dp"
       android:paddingStart="24dp"
       android:paddingTop="8dp"
+      android:paddingEnd="24dp"
+      android:paddingBottom="8dp"
       android:text="@string/quickie_scan_qr_code"
       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
       android:textColor="@color/quickie_white"
@@ -34,23 +34,39 @@
       android:layout_margin="12dp"
       android:background="@drawable/quickie_bg_round"
       android:padding="12dp"
-      android:visibility="gone"
       app:srcCompat="@drawable/quickie_ic_close"
       tools:visibility="visible"
       />
 
-  <androidx.appcompat.widget.AppCompatImageView
-      android:id="@+id/torch_image_view"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_gravity="top|end"
-      android:layout_margin="12dp"
-      android:background="@drawable/quickie_bg_round"
-      android:padding="12dp"
-      android:visibility="gone"
-      app:srcCompat="@drawable/quickie_ic_torch"
-      tools:visibility="visible"
-      />
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:layout_gravity="top|end">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/history_image_view"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/quickie_bg_round"
+        android:paddingHorizontal="12dp"
+        app:srcCompat="@drawable/ic_history_white"
+        tools:visibility="visible"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/torch_image_view"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="12dp"
+        android:background="@drawable/quickie_bg_round"
+        android:padding="12dp"
+        app:srcCompat="@drawable/quickie_ic_torch"
+        tools:visibility="visible"
+        />
+
+  </LinearLayout>
 
   <LinearLayout
       android:id="@+id/progress_view"
@@ -67,23 +83,23 @@
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:indeterminate="true"
-        android:indeterminateTintMode="src_in"
         android:indeterminateTint="@color/quickie_gray"
+        android:indeterminateTintMode="src_in"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
+        style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:paddingTop="4dp"
+        android:paddingEnd="24dp"
         android:text="@string/quickie_please_wait"
         android:textColor="@color/quickie_gray"
-        style="@style/TextAppearance.AppCompat.Subhead"
         />
   </LinearLayout>
 
